# src/v1/go/api.go
@@ -23,10 +23,12 @@ import (
 type DefaultApiRouter interface { 
 	DeleteV1BucketName(http.ResponseWriter, *http.Request)
 	DeleteV1FileName(http.ResponseWriter, *http.Request)
+	GetV1BucketBucketNameTranslateFileName(http.ResponseWriter, *http.Request)
 	GetV1BucketName(http.ResponseWriter, *http.Request)
 	GetV1Buckets(http.ResponseWriter, *http.Request)
 	GetV1FileName(http.ResponseWriter, *http.Request)
 	GetV1Files(http.ResponseWriter, *http.Request)
+	OptionsV1BucketBucketNameTranslateFileName(http.ResponseWriter, *http.Request)
 	OptionsV1BucketName(http.ResponseWriter, *http.Request)
 	OptionsV1Buckets(http.ResponseWriter, *http.Request)
 	OptionsV1FileName(http.ResponseWriter, *http.Request)
@@ -44,10 +46,12 @@ type DefaultApiRouter interface {
 type DefaultApiServicer interface { 
 	DeleteV1BucketName(context.Context, string) (ImplResponse, error)
 	DeleteV1FileName(context.Context, string, string) (ImplResponse, error)
+	GetV1BucketBucketNameTranslateFileName(context.Context, string, string) (ImplResponse, error)
 	GetV1BucketName(context.Context, string) (ImplResponse, error)
 	GetV1Buckets(context.Context) (ImplResponse, error)
 	GetV1FileName(context.Context, string, string) (ImplResponse, error)
 	GetV1Files(context.Context, string) (ImplResponse, error)
+	OptionsV1BucketBucketNameTranslateFileName(context.Context, string, string, OptionsV1BucketBucketNameTranslateFileNameRequest) (ImplResponse, error)
 	OptionsV1BucketName(context.Context, string) (ImplResponse, error)
 	OptionsV1Buckets(context.Context) (ImplResponse, error)
 	OptionsV1FileName(context.Context, string, string) (ImplResponse, error)
