# src/v1/go/model_options_v1_bucket_bucket_name_translate_file_name_request.go
@@ -1,0 +1,34 @@
+/*
+ * cloudwpss23-openapi-cyan
+ *
+ * OpenAPI Reference für das CloudWP der HAW Hamburg für das SommerSemster 2023
+ *
+ * API version: 1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type OptionsV1BucketBucketNameTranslateFileNameRequest struct {
+
+	From string `json:"from,omitempty"`
+
+	To string `json:"to,omitempty"`
+}
+
+// AssertOptionsV1BucketBucketNameTranslateFileNameRequestRequired checks if the required fields are not zero-ed
+func AssertOptionsV1BucketBucketNameTranslateFileNameRequestRequired(obj OptionsV1BucketBucketNameTranslateFileNameRequest) error {
+	return nil
+}
+
+// AssertRecurseOptionsV1BucketBucketNameTranslateFileNameRequestRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of OptionsV1BucketBucketNameTranslateFileNameRequest (e.g. [][]OptionsV1BucketBucketNameTranslateFileNameRequest), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseOptionsV1BucketBucketNameTranslateFileNameRequestRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aOptionsV1BucketBucketNameTranslateFileNameRequest, ok := obj.(OptionsV1BucketBucketNameTranslateFileNameRequest)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertOptionsV1BucketBucketNameTranslateFileNameRequestRequired(aOptionsV1BucketBucketNameTranslateFileNameRequest)
+	})
+}
